﻿drkns 24.03.2016 02:05:31 +0200 - build 4593

1. Падение при нажатии +/- в панели информации, если там присутствовал вьювер.

drkns 23.03.2016 20:31:08 +0200 - build 4592

1. С форума: Не логичное поведение при удалении сетевого диска

w17 23.03.2016 17:59:00 +0300 - build 4591

1. M#3089: Мелкая правка в панели информации (Ctrl+L)

w17 22.03.2016 13:55:04 +0300 - build 4590

1. Продолжение 4587 -- EOPT_SHOWSCROLLBAR; VCTL_GETINFO: VOPT_SHOWxxx, VOPT_QUICKVIEW.

drkns 22.03.2016 08:27:45 +0200 - build 4589

1. Уточнение 4585.

drkns 21.03.2016 17:11:49 +0200 - build 4588

1. Macro ARRAYSIZE -> constexpr std::size

shmuel 21.03.2016 16:05:35 +0200 - build 4587

1. ECTL_GETINFO: в перечисление EDITOR_OPTIONS добавлены флаги EOPT_SHOWTITLEBAR и EOPT_SHOWKEYBAR.

drkns 21.03.2016 15:31:02 +0200 - build 4586

1. Продолжение 4584.

drkns 20.03.2016 11:57:40 +0200 - build 4585

1. Продолжение 4584.

drkns 20.03.2016 00:41:42 +0200 - build 4584

1. Убираем костыли, щедро расставленные повсеместно для поддержки VS2010 и компании.

drkns 19.03.2016 23:19:41 +0200

1. Given that our German users aren't happy with "#0003145: New German translation", I'm reverting it to the previous version.
   Only previously untranslated strings are picked from #0003145 now.

drkns 18.03.2016 18:03:45 +0200

1. Для сборки требуются VC++ 2015 / GCC 5.

drkns 18.03.2016 12:00:11 +0200 - build 4583

1. Продолжение 4582 - сортируем без расширения структуры FileListItem, которая и без того жирная.
   Кроме того, возможно, будет немного быстрее.

shmuel 17.03.2016 18:18:54 +0200 - build 4582

1. Кастомные сортировки в панелях повреждали содержимое внутренних структур FileListItem
   (это проявлялось при сборке Far с GCC 5.2 или 5.3).
   Алгоритм кастомной сортировки пришлось изменить, теперь нет прямой манипуляции с памятью.

drkns 14.03.2016 23:51:08 +0200 - build 4581

1. Вернём поведение ACTL_REDRAWALL, существовавшее до 4545.

shmuel 14.03.2016 11:39:07 +0200 - build 4580
