@@ -39,6 +39,7 @@
 @History.ViewEditHistory.Lifetime=History.Config
 @Viewer.F8CPs=Editor.F8CPs
 @Editor.WordDiv=System.WordDiv
+@Panel.InfoSettings=InfoPanel
 
 @Contents
 $^#File and archive manager#
@@ -1138,6 +1139,9 @@ prompt, and set the '#Local Policies/Security Options/Devices: Restrict#
 
     ^<wrap>For virtual devices (SUBST-disk) the parameters of the primary disk are
 shown.
+
+    ^<wrap>#Ctrl-S# toggles size display mode: float with size suffixes or bytes.
+Memory size display mode also changes. Current mode - far:config #Panel.Info.ShowBytes# (default=false).
 
  2. ^<wrap>name and type of the #current disk#, type of the file system, network
 name, total and free space, disk volume label and serial number;
