@@ -1,4 +1,9 @@
-﻿drkns 24.03.2016 02:05:31 +0200 - build 4593
+﻿w17 24.03.2016 14:55:56 +0300 - build 4594
+
+1. Продолжение 4590.
+   Режим показа размера настраивается: Panel.Info.ShowBytes (default=false); переключение по Ctrl-S. 
+
+drkns 24.03.2016 02:05:31 +0200 - build 4593
 
 1. Падение при нажатии +/- в панели информации, если там присутствовал вьювер.
 
